Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117404

[REG 6.6.0beta4->6.7.0] location\geojson_viewer not compiling on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 FF
    • 6.7.0 FF
    • Location
    • Android
    • 700766026 (dev)

    Description

      Install Qt 6.7.0 Android snapshot on Windows, configure example location\geojson_viewer

      6.7.0\android_arm64_v8a\bin\qt-cmake -S C:\Users\qt\RTA\Qt_6.7.0\Examples\Qt-6.7.0\location\geojson_viewer -B C:\Users\qt\RTA\Qt_6.7.0\Examples\Qt-6.7.0\location\geojson_viewer\bld_arm64-v8a -DANDROID_SDK_ROOT=%ANDROID_SDK_ROOT% -DANDROID_NDK_ROOT=%ANDROID_NDK_ROOT_DEFAULT% -GNinja
      

      Finishes ok, compile:

      cmake --build . --target all in C:\Users\qt\RTA\Qt_6.7.0\Examples\Qt-6.7.0\location\geojson_viewer\bld_arm64-v8a

      Fails:

      [1/8] Automatic MOC and UIC for target qml_location_geojsonviewer 
      [2/8] Running rcc for resource qml 
      [3/8] Building CXX object CMakeFiles/qml_location_geojsonviewer.dir/qml_location_geojsonviewer_autogen/mocs_compilation.cpp.o 
      [4/8] Building CXX object CMakeFiles/qml_location_geojsonviewer.dir/bld_arm64-v8a/.rcc/qrc_qml.cpp.o 
      [5/8] Building CXX object CMakeFiles/qml_location_geojsonviewer.dir/main.cpp.o
      FAILED: CMakeFiles/qml_location_geojsonviewer.dir/main.cpp.o  
      C:\Utils\Android\android-ndk-r25b\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=aarch64-none-linux-android23 --sysroot=C:/Utils/Android/android-ndk-r25b/toolchains/llvm/prebuilt/windows-x86_64/sysroot -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_OPENGL_LIB -DQT_POSITIONING_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK_LIB -Dqml_location_geojsonviewer_EXPORTS -IC:/Users/qt/RTA/Qt_6.7.0/Examples/Qt-6.7.0/location/geojson_viewer/bld_arm64-v8a -IC:/Users/qt/RTA/Qt_6.7.0/Examples/Qt-6.7.0/location/geojson_viewer -IC:/Users/qt/RTA/Qt_6.7.0/Examples/Qt-6.7.0/location/geojson_viewer/bld_arm64-v8a/qml_location_geojsonviewer_autogen/include -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtCore -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/mkspecs/android-clang -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtGui -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtPositioning -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtQml -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtQmlIntegration -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtNetwork -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtQuick -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtQmlModels -isystem C:/Users/qt/RTA/Qt_6.7.0/6.7.0/android_arm64_v8a/include/QtOpenGL -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fPIC -fvisibility=default -pthread -std=gnu++17 -MD -MT CMakeFiles/qml_location_geojsonviewer.dir/main.cpp.o -MF CMakeFiles\qml_location_geojsonviewer.dir\main.cpp.o.d -o CMakeFiles/qml_location_geojsonviewer.dir/main.cpp.o -c C:/Users/qt/RTA/Qt_6.7.0/Examples/Qt-6.7.0/location/geojson_viewer/main.cpp 
      C:/Users/qt/RTA/Qt_6.7.0/Examples/Qt-6.7.0/location/geojson_viewer/main.cpp:16:14: fatal error: 'QtCore/private/qandroidextras_p.h' file not found 
      #    include <QtCore/private/qandroidextras_p.h> 
                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
      1 error generated. 
      ninja: build stopped: subcommand failed. 

      Fails also on macOS Android.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            joaijala Johanna Äijälä
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes