Fix build of geojson_viewer example on Android

Don't use the private qandroidextras header.

Not using the new permission API yet, just fixing the build for now. The
example builds and launches correctly on the emulator without asking
for permisssions anyway.

Pick-to: 6.6
Fixes: QTBUG-117404
Change-Id: I2f67bd9dfe23e3033db6e18d79d1f05f5be05b8b
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>